--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="live_class_doubts">
         <font color="#000000"><b>Live Class</b></font><font color="#16B5DD"> + </font><font color="#000000"><b>Doubts</b></font><font color="#16B5DD"> + </font><font color="#000000"><b>Personal Mentor</b></font>
 </string>
+    <string name="starting_from_149">Starting from <b>\u20B9 149</b></string>
 </resources>
